# ArbitraryMemoryMapper

./: .gitmodules  AMMlib.cpp  AMMlib.h  ArbitraryMemMap.cbp  ArbitraryMemMap.cpp  ArbitraryMemMap.depend  ArbitraryMemMap.h  ArbitraryMemMap.layout  CMakeLists.txt  CMakeLists.txt-old  Defines.h  LICENSE  LuaMemoryMapper.cpp  LuaMemoryMapperLib.cpp  LuaMemoryMapperLib.h  Makefile  Makefile-old  MemoryHandle.cpp  MemoryHandle.h  README.md  config.h  func_signatures_recursive.cpp  func_signatures_recursive.h  fuzzy_aob.cpp  fuzzy_aob.h  lua51.lib  print_to_mem.cpp  print_to_mem.h  remappingValues.cpp  remappingValues.h  revinfo.h  test.cpp  virtualMemorySpace.lua
AMM/: InterprocessMemorySpace.cpp  InterprocessMemorySpace.h  LoggedPage.cpp  LoggedPage.h  LuaPage.cpp  LuaPage.h  WindowsPageAccessor.cpp  WindowsPageAccessor.h  addressSpace.cpp  addressSpace.h  callbackOnWritePage.cpp  callbackOnWritePage.h  filePage.cpp  filePage.h  multiPage.cpp  multiPage.h  pageVisualizer.cpp  pageVisualizer.h  selfRefrence.cpp  selfRefrence.h  snapshotPage.cpp  snapshotPage.h  virtualMemorySpace.cpp  virtualMemorySpace.h  virtualPage.cpp  virtualPage.h
AMM/math/: hsv2rgb.cpp  hsv2rgb.h
IDEProjectFiles/AMMlinux/: AMMlinux.cbp  AMMlinux.depend  AMMlinux.layout  linuxSpecific.cpp
IDEProjectFiles/AMMwin32/: revinfo.h  (+4 more)
LuaScripts/: LuaPageTest01.lua  MemoryMap(multiMapExample).lua  MemoryMap.lua  MemoryMap_old.lua  MemoryMap_old2.lua  MemoryMap_old_.lua  TmpDirPage.lua  X_win_page.lua  new 47.lua
SourceTrail/: AMM.srctrldb  AMM.srctrlprj
daemon/: CMakeLists.txt  CMakeLists.txt-old  Readme.md  ammsvc.cpp  ammsvc.h  daemonpp.cpp  printoverride.c  printoverride.h
daemon/lua-5.4.4/src/: CMakeLists.txt
deamon/: CMakeLists.txt  Readme.md  ammsvc.cpp  daemonpp.cpp
(+15 files in other folders)
